--- a/web4test/src/main/webapp/edit/css/Edit.css
+++ b/web4test/src/main/webapp/edit/css/Edit.css
@@ -278,7 +278,8 @@ div.canvas {
 	right: 40px;
 	width: 50px;
 	heigh: 50px;
-	visibility: visible;
+	visibility: hidden;
+	display : none;
 	position: absolute;
 	z-index: 100;
 	cursor: pointer;
@@ -386,6 +387,18 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	padding: 0 0 8px 0;
 	-webkit-overflow-scrolling: touch;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+
+.section-color{
+	top : 3px;
+	display : block ;
+	opacity : 0;
+	position : absolute;
+	z-index : 5;
+	cursor : pointer;
+	width : 45px;
+	height : 45px;
 }
 
 .sidebar
@@ -2722,6 +2735,396 @@ div.nav-item {
 	cursor: pointer;
 	background: #222;
 }
+
+
+/* multi */
+.toolbar .multi-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
+.toolbars .toolbar .multi-list {
+	position: absolute;
+	visibility: hidden;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding: 12px;
+	-webkit-overflow-scrolling: touch;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.toolbar .multi-list .toolbar-divider {
+	margin-top: 10px;
+	height: 3px;
+	width: 100%;
+	padding: 0;
+	background-color: #444;
+}
+
+.toolbar .multi-list .toolbar-radio .toolbar-radio-inner {
+	background: #4e4e4e;
+	border: 1px solid #292929;
+}
+
+.toolbar .multi-list .toolbar-radio .toolbar-radio-item {
+	display: inline-block;
+	padding: 6px 8px;
+	cursor: pointer;
+	multi-align: center;
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	border: 1px solid #292929;
+	cursor: pointer;
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger .colorinput {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger .back-colorinput
+	{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger .multi-colorinput
+	{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger .multi-border-colorinput
+	{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+}
+
+.toolbar .multi-list .toolbar-color-trigger .toolbar-color-reset {
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 7px;
+	z-index: 2;
+	color: #fff;
+	opacity: 0.3;
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+.toolbar .multi-list .toolbar-color .toolbar-color-trigger.transparent {
+	background: blue;
+	background-repeat: repeat;
+}
+
+.toolbar .multi-list .toolbar-color-trigger .toolbar-color-reset {
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 7px;
+	z-index: 2;
+	color: #fff;
+	opacity: 0.3;
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+.toolbar .multi-list .toolbar-range .range {
+	position: relative;
+	height: 30px;
+	width: 100%;
+	background: #4e4e4e;
+	border: 1px solid #292929;
+	cursor: col-resize;
+}
+
+.toolbar .multi-list .toolbar-range .range .range-progress {
+	height: 100%;
+	background: rgba(255, 255, 255, 0.6);
+	-webkit-transition: background 0.15s ease;
+	transition: background 0.15s ease;
+}
+
+.toolbar .multi-list .toolbar-range .range .range-numeric {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 28px;
+	padding: 0 6px;
+	line-height: 28px;
+	color: #fff;
+	multi-shadow: 0px 0px 1px #000;
+}
+
+.toolbar .multi-list .toolbar-stepper .stepper {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	background: #4e4e4e;
+	border: 1px solid #292929;
+	cursor: col-resize;
+}
+
+.toolbar .multi-list .toolbar-group {
+	margin-bottom: 15px;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger {
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	multi-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger .label
+	{
+	float: left;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger-border
+	{
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	multi-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger-border .label
+	{
+	float: left;
+}
+
+.toolbar .multi-list .multi-checkbox {
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 0px;
+	border: 1px solid #555;
+	multi-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: rgba(0, 0, 0, 0);
+}
+.toolbar .multi-list .multi-link-checkbox {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    top: 0px;
+    border: 1px solid #555;
+    multi-align: center;
+    font-size: 14px;
+    line-height: 0.8;
+    float: right;
+    color: rgba(0, 0, 0, 0);
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger-link {
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	multi-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-trigger-link .label
+	{
+	float: left;
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-options-border
+	{
+	height: 0px;
+	position: relative;
+	background: #3f3f3f;
+	margin-left: -12px;
+	width: 168px;
+	visibility: hidden;
+	overflow: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+	transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-options-link {
+	height: 0px;
+	position: relative;
+	background: #3f3f3f;
+	margin-left: -12px;
+	width: 168px;
+	visibility: hidden;
+	overflow: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+	transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+}
+
+.toolbar .multi-list .toolbar-group .multi-toolbar-group-options-inner {
+	border-top: 1px solid #292929;
+	border-bottom: 1px solid #292929;
+	padding: 12px 12px 0 12px;
+}
+
+.toolbar .multi-list .toolbar-multi {
+	display: block;
+	position: relative;
+	height: auto;
+	margin-bottom: 15px;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-touch-callout: none
+}
+
+.toolbar .multi-list .toolbar-multi .toolbar-multi-item {
+	display: inline-block;
+	padding: 6px 8px;
+	cursor: pointer;
+	multi-align: center;
+	background: #4e4e4e;
+	border: 1px solid #292929;
+	border-radius: 2px;
+}
+
+.toolbar .multi-list .toolbar-select .multi-toolbar-select-trigger {
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 28px 0 6px;
+	color: #fff;
+	background-color: #4e4e4e;
+	border: 1px solid #292929;
+	box-shadow: none;
+	cursor: pointer;
+	background-repeat: no-repeat;
+	background-position: right 50%;
+	-webkit-transition: opacity 0.15s ease;
+	transition: opacity 0.15s ease;
+}
+
+.toolbar .multi-list .toolbar-option .toolbar-option-label {
+	position: relative;
+	margin-bottom: 6px;
+	font-size: 11px;
+	font-weight: normal;
+	multi-transform: uppercase;
+	color: #ddd;
+	cursor: default;
+}
+
+.toolbar .multi-list .toolbar-stepper .stepper .stepper-number {
+	width: 100%;
+	height: 28px;
+	line-height: 28px;
+	padding: 0 6px;
+	color: #fff;
+	background: transparent;
+	border: 0;
+	outline: 0;
+	outline-offset: 0;
+	cursor: col-resize;
+}
+
+.toolbar .multi-list .toolbar-stepper .stepper {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	background: #4e4e4e;
+	border: 1px solid #292929;
+	cursor: col-resize;
+}
+
+.multi-toolbar-panel {
+	position: absolute;
+	top: 5px;
+	left: 150px;
+	margin-left: 9px;
+	color: #222;
+	background-color: #eee;
+	font-size: 14px;
+	z-index: 2;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+	display: block;
+	overflow-y: auto;
+	visibility: hidden;
+}
+
+.multi-toolbar-panel .toolbar-panel-content {
+	overflow: auto;
+	padding: 1px;
+	-webkit-overflow-scrolling: touch;
+}
+
+.multi-toolbar-panel .toolbar-select-item {
+	display: inline-block;
+	width: 23%;
+	height: 61px;
+	padding: 14px;
+	cursor: pointer;
+	border: 1px solid transparent;
+}
+
+/* .multi-toolbar-panel .toolbar-select-item.selected {
+	display: inline-block;
+	width: 24px;
+	height: 31px;
+	margin: 10px;
+	padding: 14px;
+	cursor: pointer;
+	border: 1px solid transparent;
+} */
+
+.multi-list .toolbar-select-trigger {
+	width: 100%;
+	height: auto;
+	padding: 15px;
+	line-height: 1;
+	text-align: center;
+	background-color: #444;
+	background-image: #444;
+	cursor: pointer;
+}
+
 
 /*TEXT 편집창*/
 /* 텍스트 폰트 수정 창*/
